--- a/src/main/resources/assets/dessertcraft/lang/es_ES.lang
+++ b/src/main/resources/assets/dessertcraft/lang/es_ES.lang
@@ -1,24 +1,28 @@
-item.dessertcraft_fancyThing.name=Fancy Thing
-item.dessertcraft_germanCake.name=Black Forest Cake
-item.dessertcraft_cherry.name=Cherry
-item.dessertcraft_iceCreamChocolate.name=Chocolate Ice Cream
-item.dessertcraft_iceCreamCherry.name=Cherry Ice Cream
-item.dessertcraft_iceCreamStrawberry.name=Strawberry Ice Cream
-item.dessertcraft_strawberry.name=Strawberry
-item.dessertcraft_strawberrySeeds.name=Strawberry Seeds
-item.dessertcraft_sugarWater_bottle.name=Bottle of Sugar Water
-item.dessertcraft_Rum_bottle.name=Bottle of Rum
+item.dessertcraft_fancyThing.name=Cosa cara
+item.dessertcraft_germanCake.name=Torta alemana
+item.dessertcraft_cherry.name=Cereza
+item.dessertcraft_iceCreamChocolate.name=Helado chocolate
+item.dessertcraft_iceCreamCherry.name=Helado de cerezas
+item.dessertcraft_iceCreamStrawberry.name=Helado de fresas
+item.dessertcraft_strawberry.name=Fresa
+item.dessertcraft_strawberrySeeds.name=Semillas de la fresa
+item.dessertcraft_sugarWater_bottle.name=Botella de agua azucarada
+item.dessertcraft_Rum_bottle.name=Botella de ron
+item.dessertcraft_peanut.name=Cacahuetes
+item.dessertcraft_iceCreamPeanutButter.name=Helado de mantequilla de cacahuetes
 
-tile.dessertcraft_log_cherry.name=Cherry Wood Log
-tile.dessertcraft_cherryPlanks.name=Cherry Wood Planks
-tile.dessertcraft_cherryLeaf.name=Cherry Leaves
-tile.dessertcraft_cherrySapling.name=Cherry Tree Sapling
-tile.dessertcraft_iceCreamMaker.name=Ice Cream Churn
-tile.dessertcraft_strawberryPlant.name=Strawberry Bush
-tile.dessertcraft_barrel.name=Barrel
-tile.dessertcraft_leaf_cherry.name=Cherry Leaf
+tile.dessertcraft_log_cherry.name=Tronco de cerezo
+tile.dessertcraft_cherryPlanks.name=Madera de cerezo
+tile.dessertcraft_cherryLeaf.name=Hojas de cerezo
+tile.dessertcraft_cherrySapling.name=Brote de cerezo
+tile.dessertcraft_iceCreamMaker.name=Mantequera de helado
+tile.dessertcraft_strawberryPlant.name=Arbusto de fresas
+tile.dessertcraft_barrel.name=Barril
+tile.dessertcraft_leaf_cherry.name=Hojas de cerezo
+tile.dessertcraft_cherryStair.name=Escaleras de madera de cerezo
+tile.dessertcraft_cherrySlab.name=Lado de madera de cerezo
 
-container.dessertcraft_iceCreamMaker=Ice Cream Churn
-container.dessertcraft_barrel=Barrel
+container.dessertcraft_iceCreamMaker=Mantequera de helado
+container.dessertcraft_barrel=Barril
 
 dessertcraft_text_ferment=Fermentar
