--- a/src/main/resources/assets/dessertcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dessertcraft/lang/en_US.lang
@@ -10,6 +10,7 @@ item.dessertcraft_sugarWater_bottle.name=Bottle of Sugar Water
 item.dessertcraft_Rum_bottle.name=Bottle of Rum
 item.dessertcraft_peanut.name=Peanut
 item.dessertcraft_iceCreamPeanutButter.name=Peanut Butter Ice Cream
+item.dessertcraft_applePie.name=Apple Pie
 
 tile.dessertcraft_log_cherry.name=Cherry Wood
 tile.dessertcraft_cherryPlanks.name=Cherry Wood Planks
