--- a/src/main/resources/assets/dessertcraft/lang/es_ES.lang
+++ b/src/main/resources/assets/dessertcraft/lang/es_ES.lang
@@ -31,3 +31,8 @@ container.dessertcraft_pastryCounter.name=Encimera
 dessertcraft_text_ferment=Fermentar
 dessertcraft_text_empty=Vaciar
 text_empty_adj=Vacío
+
+achievement.dessertLover.name=¡Me gustan los postres!
+achievement.dessertLover.desc=Comer su primer postre de DessertCraft
+achievement.gourmand.name=Glotón
+achievement.gourmand.desc=Comer uno de todos los postres de DessertCraft
