--- a/src/main/resources/assets/dessertcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dessertcraft/lang/en_US.lang
@@ -31,3 +31,8 @@ container.dessertcraft_pastryCounter.name=Countertop
 dessertcraft_text_ferment=Ferment
 dessertcraft_text_empty=Empty
 text_empty_adj=Empty
+
+achievement.dessertLover.name=Dessert Lover
+achievement.dessertLover.desc=Eat your first new dessert
+achievement.gourmand.name=Gourmand
+achievement.gourmand.desc=Eat one of every new dessert in the game!
