--- a/src/main/resources/assets/dessertcraft/lang/es_ES.lang
+++ b/src/main/resources/assets/dessertcraft/lang/es_ES.lang
@@ -14,6 +14,8 @@ item.dessertcraft_applePie.name=Tarta de manzana
 item.dessertcraft_mixingBowl.name=Tazón
 item.dessertcraft_trifle.name=Bizcocho borracho con crema
 item.dessertcraft_pudding.name=Andullo
+item.dessertcraft_rumBall.name=Bola de ron y chocolate
+item.dessertcraft_rumCake.name=Tarta de ron
 
 tile.dessertcraft_log_cherry.name=Tronco de cerezo
 tile.dessertcraft_cherryPlanks.name=Madera de cerezo
