--- a/src/main/resources/assets/dessertcraft/lang/pt_PT.lang
+++ b/src/main/resources/assets/dessertcraft/lang/pt_PT.lang
@@ -14,6 +14,8 @@ item.dessertcraft_applePie.name=Torta de Maçã
 item.dessertcraft_mixingBowl.name=Bacia de mistura
 item.dessertcraft_trifle.name=Bêbado Bolo com Creme
 item.dessertcraft_pudding.name=Farinheira
+item.dessertcraft_rumBall.name=Balla de Rum e Chocolate
+item.dessertcraft_rumCake.name=Bolo de Rum
 
 tile.dessertcraft_log_cherry.name=Madeira de Cerejeira
 tile.dessertcraft_cherryPlanks.name=Tábuas de Madeira de Cerejeira
