--- a/src/main/resources/assets/dessertcraft/lang/fr_FR.lang
+++ b/src/main/resources/assets/dessertcraft/lang/fr_FR.lang
@@ -1,7 +1,7 @@
 ﻿item.dessertcraft_fancyThing.name=Chose coûteuse
 item.dessertcraft_germanCake.name=Gâteau allemand
 item.dessertcraft_cherry.name=Cerise
-item.dessertcraft_iceCream_Chocolate.name=Crème glacée au chocolat
+item.dessertcraft_iceCream_chocolate.name=Crème glacée au chocolat
 item.dessertcraft_iceCream_cherry.name=Crème glacée à la cerise
 item.dessertcraft_iceCream_strawberry.name=Crème glacée à la fraise
 item.dessertcraft_strawberry.name=Fraise
@@ -14,6 +14,8 @@ item.dessertcraft_applePie.name=Tarte aux pommes
 item.dessertcraft_mixingBowl.name=Bol à mélanger
 item.dessertcraft_trifle.name=Gâteau à la créme
 item.dessertcraft_pudding.name=Pudding
+item.dessertcraft_rumBall.name=Rhum balle au chocolat
+item.dessertcraft_rumCake.name=Gâteau au rhum
 
 tile.dessertcraft_log_cherry.name=Bois de merisier
 tile.dessertcraft_cherryPlanks.name=Planches de merisier
