--- a/src/main/resources/assets/dessertcraft/lang/fr_FR.lang
+++ b/src/main/resources/assets/dessertcraft/lang/fr_FR.lang
@@ -38,7 +38,7 @@ dessertcraft_text_ferment=Fermenter
 dessertcraft_text_empty=Vidanger
 text_empty_adj=Vide
 
-achievement.dessertLover.name=J'adore les desserts !
+achievement.dessertLover=J'adore les desserts !
 achievement.dessertLover.desc=Manger votre premier dessert DessertCraft
-achievement.gourmand.name=Gourmand
+achievement.gourmand=Le gourmand
 achievement.gourmand.desc=Manger un de chacun des desserts DessertCraft
