--- a/src/main/resources/assets/dessertcraft/lang/pt_PT.lang
+++ b/src/main/resources/assets/dessertcraft/lang/pt_PT.lang
@@ -38,7 +38,7 @@ dessertcraft_text_ferment=Fermentar
 dessertcraft_text_empty=Esvaziar
 text_empty_adj=Vazio
 
-achievement.dessertLover.name=Eu amo sobremesas!
+achievement.dessertLover=Eu amo sobremesas!
 achievement.dessertLover.desc=Comer uma sobremesa de DessertCraft
-achievement.gourmand.name=Comilão
+achievement.gourmand=O Comilão
 achievement.gourmand.desc=Coma um de cada sobremesa de DessertCraft
