--- a/src/main/resources/assets/dessertcraft/lang/en_US.lang
+++ b/src/main/resources/assets/dessertcraft/lang/en_US.lang
@@ -42,3 +42,13 @@ achievement.dessertLover=Dessert Lover
 achievement.dessertLover.desc=Eat your first new dessert
 achievement.gourmand=Gourmand
 achievement.gourmand.desc=Eat one of every new dessert in the game!
+achievement.mixMaster=Mix Master
+achievement.mixMaster.desc=Craft a mixing bowl
+achievement.patisserie=Patisserie
+achievement.patisserie.desc=Craft a countertop
+achievement.makeChurn=Creamery Get
+achievement.makeChurn.desc=Craft an Ice Cream Churn
+achievement.homebrew=Time for Moonshine
+achievement.homebrew.desc=Craft a Barrel
+achievement.drunk=Under the Influence
+achievement.drunk.desc=Get drunk (do not drive or operate heavy machinery)
