--- a/src/main/resources/assets/dessertcraft/lang/es_ES.lang
+++ b/src/main/resources/assets/dessertcraft/lang/es_ES.lang
@@ -42,3 +42,13 @@ achievement.dessertLover=¡Me gustan los postres!
 achievement.dessertLover.desc=Comer su primer postre de DessertCraft
 achievement.gourmand=El glotón
 achievement.gourmand.desc=Comer uno de todos los postres de DessertCraft
+achievement.mixMaster=Para mezclar...
+achievement.mixMaster.desc=Fabrica un tazón
+achievement.patisserie=Pastelería
+achievement.patisserie.desc=Fabrica una encimera
+achievement.makeChurn=En la heladería
+achievement.makeChurn.desc=Fabrica una mantequera de helado
+achievement.homebrew=Homebrew
+achievement.homebrew.desc=Fabrica un barril
+achievement.drunk=Borracho
+achievement.drunk.desc=Bebe el alcohol (no manejas ni automóviles ni maquinarias pesadas)
